@@ -320,6 +320,10 @@ public class PlayerApp {
 		}
 	}
 
+	public static native void setLangAttribute (String lang) /*-{
+		$wnd.$("html").attr("lang", lang);
+	}-*/;
+	
 	private void setHandlers(final boolean isCommonPage) {
 		PlayerView playerView = new PlayerView();
 		playerController = new PlayerController(contentModel, playerView, bookMode, entryPoint);
@@ -337,6 +341,8 @@ public class PlayerApp {
 				if (contentModel.getMetadataValue("staticFooter").compareTo("true") == 0 && playerController.hasFooter()) {
 					makeFooterStatic();
 				}
+				
+				setLangAttribute(contentModel.getMetadataValue("lang"));
 
 				entryPoint.onPageLoaded();
 			}
