@@ -41,6 +41,7 @@ public class TextModel extends BasicModuleModel {
 	private boolean blockWrongAnswers = false;
 	private boolean userActionEvents = false;
 	private boolean useEscapeCharacterInGap = false;
+	private String langAttribute = "";
 
 	public TextModel() {
 		super("Text", DictionaryWrapper.get("text_module"));
@@ -61,6 +62,7 @@ public class TextModel extends BasicModuleModel {
 		addPropertyBlockWrongAnswers();
 		addPropertyUserActionEvents();
 		addPropertyUseEscapeCharacterInGap();
+		addPropertyLangAttribute();
 	}
 
 	@Override
@@ -114,6 +116,7 @@ public class TextModel extends BasicModuleModel {
 					blockWrongAnswers = XMLUtils.getAttributeAsBoolean(textElement, "blockWrongAnswers", false);
 					userActionEvents = XMLUtils.getAttributeAsBoolean(textElement, "userActionEvents", false);
 					this.useEscapeCharacterInGap = XMLUtils.getAttributeAsBoolean(textElement, "useEscapeCharacterInGap", false);
+					langAttribute = XMLUtils.getAttributeAsString(textElement, "langAttribute");
 					
 					if (rawText == null) {
 						rawText = StringUtils.unescapeXML(XMLUtils.getText(textElement));
@@ -174,6 +177,7 @@ public class TextModel extends BasicModuleModel {
 				"' blockWrongAnswers='" + blockWrongAnswers +
 				"' userActionEvents='" + userActionEvents +
 				"' useEscapeCharacterInGap='" + this.useEscapeCharacterInGap +
+				"' langAttribute='" + langAttribute +
 				"'><![CDATA[" + moduleText + "]]></text>";
 		xml += "</textModule>";
 
@@ -788,6 +792,39 @@ public class TextModel extends BasicModuleModel {
 
 		addProperty(property);
 	}
+	
+	private void addPropertyLangAttribute() {
+		IProperty property = new IProperty() {
+
+			@Override
+			public void setValue(String newValue) {
+				langAttribute = newValue;
+				sendPropertyChangedEvent(this);
+			}
+
+			@Override
+			public String getValue() {
+				return langAttribute;
+			}
+
+			@Override
+			public String getName() {
+				return DictionaryWrapper.get("text_module_lang_attribute");
+			}
+
+			@Override
+			public String getDisplayName() {
+				return DictionaryWrapper.get("text_module_lang_attribute");
+			}
+
+			@Override
+			public boolean isDefault() {
+				return false;
+			}
+		};
+
+		addProperty(property);
+	}
 
 	public boolean isDisabled() {
 		return isDisabled;
@@ -835,6 +872,10 @@ public class TextModel extends BasicModuleModel {
 	
 	public boolean isUsingEscapeCharacterInGap() {
 		return this.useEscapeCharacterInGap;
+	}
+	
+	public String getLangAttribute() {
+		return langAttribute;
 	}
 
 }
