@@ -117,6 +117,7 @@ var ice_dictionary_en = {
 	"rulers": "Rulers",
 	"use_rulers": "Use rulers: ",
 	"use_rulers_snapping": "Use Rulers Snapping: ",
+	"lang": "Language attribute: ",
 	"rulers_visibility": "Rulers Visibility",
 	"rulers_snapping": "Module to Rulers Snapping",
 	"static_header" : "Static header: ",
@@ -349,6 +350,7 @@ var ice_dictionary_en = {
 	"text_module_gap_width" : "Gap width",
 	"text_module_gap_max_length" : "Gap max length",
 	"text_module_value_type" : "Value type",
+	"text_module_lang_attribute": "Lang attribute",
 	"is_activity" : "Is&nbsp;activity",
 	"is_disabled" : "Is&nbsp;disabled",
 	"reset_property_confirm_reset" : "Confirm reset",
