@@ -116,6 +116,7 @@ var ice_dictionary_fr = {
 "rulers": "Règles",
 "use_rulers": "Utiliser la règle : ",
 "use_rulers_snapping": "Utiliser l'apparition de la règle : ",
+"lang": "Language attribute: ",
 "rulers_visibility": "Visibilité de la règle",
 "rulers_snapping": "Module pour l'apparition des règles",
 "static_header" : "En-tête statique : ",
@@ -345,6 +346,7 @@ var ice_dictionary_fr = {
 "text_module_gap_width" : "Largeur du champ",
 "text_module_gap_max_length" : "Longueur maximale du champ",
 "text_module_value_type" : "Type de valeur",
+"text_module_lang_attribute": "Lang attribute",
 "is_activity" : "Est&nbsp;un exercice",
 "is_disabled" : "Est&nbsp;désactivé",
 "reset_property_confirm_reset" : "Confirm reset",
