@@ -116,6 +116,7 @@ var ice_dictionary_mx = {
 	"rulers": "Reglas",
 	"use_rulers": "Uso de reglas: ",
 	"use_rulers_snapping": "Atraer a las reglas: ",
+	"lang": "Language attribute: ",
 	"rulers_visibility": "Ver Reglas",
 	"rulers_snapping": "Atraer módulo a las reglas",
 	"static_header": "Encabezado fijo: ",
@@ -345,6 +346,7 @@ var ice_dictionary_mx = {
 	"text_module_gap_width": "Anchura del hueco",
 	"text_module_gap_max_length": "Longitud máxima del hueco",
 	"text_module_value_type": "Que insertar al hueco?",
+	"text_module_lang_attribute": "Lang attribute",
 	"is_activity": "Es actividad",
 	"is_disabled": "Inhabilitar",
     "reset_property_confirm_reset" : "Confirmar reinicio",
