@@ -117,6 +117,7 @@ var ice_dictionary_pl = {
 	"use_rulers": "Użyj prowadnic: ",
 	"use_rulers_snapping": "Użyj przyciągania do prowadnic: ",
 	"rulers_visibility": "Widoczność prowadnic",
+	"lang": "Language attribute: ",
 	"rulers_snapping": "Przyciąganie modułu do prowadnic",
 	"static_header" : "Nagłówek statyczny: ",
 	"static_footer" : "Stopka statyczna: ",
@@ -345,6 +346,7 @@ var ice_dictionary_pl = {
 	"text_module_gap_width" : "Szerokość luki w tekście",
 	"text_module_gap_max_length" : "Max. dł. luki",
 	"text_module_value_type" : "Typ wartości",
+	"text_module_lang_attribute": "Lang attribute",
 	"is_activity" : "Jest&nbsp;ćwiczeniem",
 	"is_disabled" : "Jest&nbsp;wyłączony",
     "reset_property_confirm_reset" : "Potwierdź reset",
