@@ -1,3 +1,4 @@
+2017-10-05 Added language attribute in Text module and lesson
 2017-10-05 Fixed problem with too large page index
 2017-10-02 Fixed imageSource that got position zeroed when called reset() on it after PageLoaded event
 2017-10-02 Fixed problem with jumping video. Fixed problem with poster visibility.
